exports[`custom styles`] = `
<button
  onClick={undefined}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "color": "#FF8833",
      "cursor": "pointer",
      "fontSize": 20,
      "padding": "3px 10px",
      "textTransform": "uppercase",
    }
  }>
  Hello
</button>
`;

exports[`default view`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "padding": "3px 10px",
    }
  }>
  Hello
</button>
`;

exports[`link button`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "padding": "3px 10px",
    }
  }>
  Go to Next Story
</button>
`;

exports[`some emojies as the text`] = `
<button
  onClick={undefined}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "padding": "3px 10px",
    }
  }>
  😀 😎 👍 💯 
</button>
`;
